<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pluginsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="?attr/primaryShadeDarkColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="8dp"
        android:animateLayoutChanges="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fadingEdgeLength="48dp"
        android:overScrollMode="never"
        android:requiresFadingEdge="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingVertical="64dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/rounded_rect_shade_color"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    style="@style/TextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/plugins"
                    android:textColor="?attr/primaryColor" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:animateLayoutChanges="true">

                    <TextView
                        style="@style/TextSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:paddingVertical="8dp"
                        android:text="@string/permanent_note"
                        android:textColor="?attr/primaryColor" />

                    <TextView
                        android:id="@+id/showPermanentNote"
                        style="@style/TextSmallBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|bottom"
                        android:layout_marginEnd="4dp"
                        android:padding="8dp"
                        android:text="@string/off" />
                </FrameLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
